[package]
name = "ftpclientrp"
version = "0.4.0"
authors = ["Camilo Santos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftp = "3.0.1"
unrar = "0.4.4"
zip = "0.5"
confy = "0.4.0"
serde = "^1.0"
serde_derive = "^1.0"
clap = "2.33.0"